fix: better contrast in sidebar

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -5,7 +5,7 @@
   --body-color: #999;
   --theme-color: #64bfdb;
   --header-bg-color: #293650;
-  --heading-color: #CCC;
+  --heading-color: #444;
   --footer-color: #777;
   --footer-color-light: #999;
 }
